bug 837498 - work around DWrite/GDI 'cmap' discrepancy for Italic fonts with Hebrew system locale. r=smontagu